--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <script src="js/jquery.js"></script>
 </head>
 
-<div class="header"><h1>Paintstagram</h1></div>
+
+<ul>
+  <h1 style="color: white; font-family:cursive; ">Paintstagram</h1>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 
 <div align="center">
 <body class="body" align="center">
