--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
         <img  id="myImg" class="img-tr" name="cust_image" src="/moreimg/no_image.jpg">
         </div>
     </div>
+    <br>
+    <footer class="theme-noborder"><h6 style="color: gray">Paintstagram @ All rights reserve 2018</h6></footer>
 
 	</div>
 
